--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "firebase": "^12.3.0",
+    "firebase-admin": "^13.5.0",
     "vue": "^3.5.22"
   },
   "devDependencies": {
