Update Firebase service account key path and add data.json to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,4 @@ coverage
 # Firebase service account key
 serviceAccountKey.json
 data.json
+mal-profiles-about-me-expand-firebase-adminsdk-fbsvc-0379de740a.json
